[project]
name = "caption-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-mistralai>=0.2.11",
    "mistralai>=1.9.3",
    "speechrecognition>=3.14.3",
    "streamlit>=1.47.1",
]
