[project]
name = "caption-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-mistralai>=0.2.11",
    "langgraph",
    "mistralai>=1.9.3",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "speechrecognition>=3.14.3",
    "streamlit>=1.47.1",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]

[tool.setuptools]
packages = ["modules"]
